style.css
 @font-face {
  font-family: 'Rockybilly';
  src: url('./assets/fonts/Rockybilly.ttf');
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Montserrat", sans-serif;
  background-color: #0f0f1b;
  color: #fff;
  padding: 1.6rem;
}

.mobile_navbar ul {
  list-style: none;
  display: flex;
  justify-content: space-between;
  position: fixed;
  top: 2%;
  align-items: anchor-center;
  width: 88%;
}

.mobile_navbar_li {
  display: none;
}

.active {
  display: block;
}

.close-btn {
  display: block;
  float: right;
  background: none;
  font-size: 3rem;
  color: white;
  border: none;
}

.desktop-nav {
  display: none;
}

.logo a {
  display: flex;
  font-size: 1.2rem;
  color: white;
  text-decoration: none;
  gap: 0;

  animation-name: logoRotate;k
  animation-duration: 2s;
  animation-iteration-count: 1;
  animation-timing-function: ease-in-out;
}

@keyframes logoRotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.logo h1 {
  align-self: center;
  font-size: 1.8rem;
}

.hamburger {
  cursor: pointer;
  width: 40px;
  background: none;
  border: none;
  font-size: 2rem;
}

.headline {
  background-image:
    url("./assets/Group\ 162534.svg"),
    url("./assets/add.svg"),
    url("./assets/Group\ 162527.svg"),
    url("./assets/Vector\ 13.svg"),
    url("./assets/Group\ 162526.svg");
  background-repeat: no-repeat;
  background-position: 50% 97%, 98% 96%, 0% 100%, 0% 60%, 93% 61%;
  padding-bottom: 400px;
}

.logo img {
  width: 30px;
  height: 30px;
  background-color: transparent;
  transition: transform 0.2s ease;
}

.headline-text {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 40px;
  padding-top: 70px;
  padding-bottom: 40px;
}

.headline-text h1 {
  font-family: 'Luckiest Guy', sans-serif;
  font-size: 42px;
}

.headline-text h2 {
  color: #9494e4;
  font-size: 1.8rem;
  margin-top: -30px;
}

.headline-text p {
  line-height: 150%;
  font-size: 16px;
}

.about {
  padding: 40px 0;
}

.about-content {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  text-align: center;
}

.about-content h2 {
  text-align: center;
  font-size: 2.5rem;
}

.about-content p {
  font-size: 1.8rem;
  line-height: 150%;
}

.about-content a {
  align-self: center;
}

.btn {
  font-size: 22px;
  background-color: #5454d4;
  color: #fff;
  padding: 10px 20px;
  border: none;
  border-radius: 5px;
  text-decoration: none;
  cursor: pointer;
  transition: background-color 0s ease-in;
}

.btn:hover {
  background-color: #374151;
  border: #9ca3af;
}

.about-list {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  list-style: none;
  padding: 60px 0;
}

.about-card {
  background-color: #0f0f1b;
  border: 1px solid #9494e4;
  border-radius: 5px;
  padding: 3rem 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.5rem;
}

.about-card img {
  width: 90px;
  background-color: rgba(224, 224, 224, 0.5);
  padding: 15px;
  border-radius: 100px;
}

.about-card h3 {
  font-size: 1.6rem;
}

.tags {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  justify-content: center;
  list-style: none;
}

.tags li {
  background-color: #9494e4;
  color: white;
  padding: 0.5rem 1rem;
  border-radius: 8px;
  font-size: 0.9rem;
}

.works {
  display: flex;
  flex-direction: column;
  gap: 24px;
  padding: 50px 0;
}

.works h2 {
  font-size: 3rem;
  text-align: center;
}

.main-line {
  width: 20%;
  border: 1px solid white;
  border-radius: 50px;
  margin: 0 auto;
}

.projects {
  display: grid;
  grid-template-columns: 1fr;
  gap: 30px;
  padding: 40px 0;
}

.project {
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid #9494e4;
  border-radius: 10px;
}

.placeholder {
  width: 100%;
  height: 250px;
  background-color: #e0e0e0;
  border-radius: 10px 10px 0 0;
  margin-bottom: -10px;
}

.project-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
  padding: 20px 0;
  border-radius: 10px;
  background-color: #0f0f1b;
}

.project-container h3 {
  font-size: 1.6rem;
  text-align: center;
}

.project-container button {
  align-self: center;
}

.contact-container h1 {
  font-size: 2.5rem;
  text-align: center;
  color: #fff;
  line-height: 3.8rem;
  padding: 40px;
}

.contact-container h3 {
  font-size: 2.5rem;
  text-align: center;
  padding-bottom: 1rem;
}

.contact-form {
  display: flex;
  flex-direction: column;
}

.contact-form input,
.contact-form textarea {
  width: 100%;
  border: 1px;
  border-radius: 5px;
  border-style: solid;
  border-color: #9494e4;
  padding: 22px;
  background-color: transparent;
  margin: 10px 0;
  color: white;
}

.contact-form textarea {
  resize: vertical;
  min-height: 135px;
}

.contact-form .btn {
  align-self: center;
}

.social-icon {
  display: flex;
  justify-content: center;
  text-align: center;
  align-items: center;
  gap: 20px;
  margin-bottom: 10px;
  padding: 40px 0 30px 0;
  margin-top: 100px;
}

.social-line {
  width: 40%;
  height: 2px;
  margin: 0 auto 20px;
  border-radius: 5px;
  background: #fff;
  margin-top: auto;
}

